public class Course {
    String name;
    
    public Course(String name){
        this.name=name;
    }
    
    public String getName(){
        return this.name;
    }
}
