@startuml DiagramaTrazas

package Analisys{
    boundary RequestCertificateView
    control "RequestCertificate" as o2
    entity "User" as o4
    entity "Course" as o5
    entity "Certificate" as o6

    RequestCertificateView --> o2
    o2 --> o4
    o2 --> o5

    o4 -- o5
    o2 --> o6 
}

package JavaClasses{
    boundary "JLabel - Java Swing" as Label
    boundary "JButtom - Java Swing" as Buttom
    entity "User - Java" as user 
    entity "Certificate - Java" as Certificate
    entity "Course - Java" as Course
}

Label .l.> RequestCertificateView
Buttom .l.> RequestCertificateView
user ..> o4
Certificate ..> o6
Course ..> o5



@enduml